# pipes

./: .gitignore  CMakeLists.txt
include/pipes/helpers/: optional.hpp
tests/: CMakeLists.txt  adjacent.cpp  cartesian_product.cpp  combinations.cpp  dev_null.cpp  do_then.cpp  drop.cpp  drop_while.cpp  filter.cpp  for_each.cpp  fork.cpp  insert.cpp  integration_tests.cpp  intersperse.cpp  join.cpp  map_aggregator.cpp  mux.cpp  override.cpp  partition.cpp  set_aggregator.cpp  streams.cpp  stride.cpp  switch.cpp  take.cpp  take_while.cpp  tap.cpp  tee.cpp  to_container.cpp  transform.cpp  unzip.cpp
